updates - adding preprocessing code

--- a/spatialdiva/tutorials/01_colorectal_cancer_spdiva_analysis.ipynb
+++ b/spatialdiva/tutorials/01_colorectal_cancer_spdiva_analysis.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up autoreload for development\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,7 +39,9 @@
    "source": [
     "We can start by loading the anndata objects for Valdeolivas et al - in this case we'll restrict it to the first two files, corresponding to two slides.\n",
     "\n",
-    "This data has been preprocessed such that spot-level deconvolution has been done, and pathologist annotations are also present in the data. UNI-feature extraction for the spot-level histpathology patches corresponding to the ST spots, has also been done. The appropriate features are stored in the `.obs` attribute of the anndata object, with the identifiers \"UNI\" before the feature name."
+    "This data has been preprocessed such that spot-level deconvolution has been done, and pathologist annotations are also present in the data. UNI-feature extraction for the spot-level histpathology patches corresponding to the ST spots, has also been done. The appropriate features are stored in the `.obs` attribute of the anndata object, with the identifiers \"UNI\" before the feature name.\n",
+    "\n",
+    "If you haven't download the Valdeolivas et al. processed data, please do so and store it in the appropriate location in `data/valdeolivas_processed`"
    ]
   },
   {
